app/styles/_menu.scss
.control-panel{
  position:relative;
  height: 0;
  max-width:$width-container;
  margin:0 auto;
}

#toggle-panel{
  width: 23px;
  height: 40px;
  z-index: 9; // 1 less than select or die
  position: absolute;
  top:0;
  right:0;
  margin: 14px 10px;
  @include respond-to("small"){
    margin: 0px 24px;
    @include transform(rotate(90deg));
  }
  cursor: pointer;
}

#toggle-panel span{
  display: block;
  position: absolute;
  height: 2px;
  width: 2px;
  background: $color-form-text;
  @include respond-to("small"){
    height: 8px;
    width: 8px;
    background: $color-secondary-background;
  }
  margin-left: 7px;
  border: 1px solid $color-form-text;
  border-radius: 5px;
  opacity: 1;
  left: 0;
  @include transform(rotate(0deg));
  @include transition(0.25s ease-in-out);
}

#toggle-panel span:nth-child(1) {
  top: 8px;
  @include respond-to("small"){
    top: 0px;
  }
}

#toggle-panel span:nth-child(2),#toggle-panel span:nth-child(3) {
  top: 15px;
}

#toggle-panel span:nth-child(4) {
  top: 22px;
  @include respond-to("small"){
    top: 30px;
  }
}

.open #toggle-panel span{
  top: 15px;
  height: 1px;
  width: 3px;
  width: 100%;
  background: $color-form-text;
  margin-left: -3px;
  @include respond-to("small"){
    top: 18px;
    margin-left: 0px;
  }
}

.open #toggle-panel span:nth-child(1) {
  width: 0%;
  left: 50%;
}
.open #toggle-panel span:nth-child(2) {
  @include transform(rotate(45deg));
}

.open #toggle-panel span:nth-child(3) {
  @include transform(rotate(-45deg));
}

.open #toggle-panel span:nth-child(4) {
  width: 0%;
  left: 50%;
}

ul.settings {
  position:absolute;
  top:40px;
  width:90%;
  right:5%;
  opacity: 0;
  padding:0px 0px 0px 0px;
  list-style:none;
  background:$color-secondary-background;
  z-index: -9999;
  outline: 5px solid $color-overlay-border;
  @include transition(0.25s ease-in-out);
  @include respond-to("small"){
    width:400px;
    right: 20px;
  }
}

.open ul.settings{
  opacity: 1;
  z-index: 9999;
  top:65px;
  @include respond-to("small"){
    top:47px;
  }
}

ul.settings li a{
  font-size:1em;
  color: $color-form-text;
  display: block;
  padding:25px 15px 25px 50px;
  @include respond-to("small"){
    font-size:1.5em;
    padding:25px 25px 25px 70px;
  }
}

ul.settings li a:hover {
  text-decoration:none;
  background-color:$color-main-background;
}

#panel-share::before,
#panel-language-en::before,
#panel-language-de::before,
#panel-expertmode-true::before,
#panel-expertmode-false::before,
#panel-expertmode-true span::before,
#panel-expertmode-false span::before,
#panel-language-de span::before,
#panel-language-en span::before,
#panel-share::before,
#panel-more::before,
#panel-feedback::before{
  @include transition(0.25s ease-in-out);
  width: 20px;
  height: 20px;
  margin: -5px 0 0 -35px;
  @include respond-to("small"){
    width: 30px;
    height: 30px;
    margin: -10px 0 0 -50px;
  }
  content: "";
  position: absolute;
  background-position: center center;
  background-size: contain;
  background-repeat: no-repeat;
}

#panel-language-en::before{
  background-image: inline-image("language.svg");
}

#panel-language-de::before{
  background-image: inline-image("language.svg");
  @include scaleX(-1);
}

#panel-language-de span::before,
#panel-language-en span::before{
  width: 10px;
  margin-left:-30px;
  @include respond-to("small"){
    width: 14px;
    margin-left:-42px;
  }
  background-image: inline-image("dots.svg");
}

#panel-language-en span::before{
  @include transform(rotate(180deg));
}

#panel-expertmode-true::before,
#panel-expertmode-false::before{
  background-image: inline-image("face.svg");
}

#panel-expertmode-false span::before,
#panel-expertmode-true span::before{
  width: 27px;
  margin-left:-39px;
  @include respond-to("small"){
    width: 40px;
    margin-left:-55px;
  }
  background-image: inline-image("glasses.svg");
  opacity: 1;
}

#panel-expertmode-false span::before{
  background-position: top;
  opacity: 0;
}

#panel-share::before{
  background-image: inline-image("share.svg");
}

#panel-more::before{
  background-image: inline-image("more.svg");
}

#panel-feedback::before{
  background-image: inline-image("feedback.svg");
}

